--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <div class="storehead" id="store">
             <div class="flex">
-                <a class="menu" href="second.html"><i  class="fas fa-bars"></i></a>
+                <a class="menu" href="About.html"><i  class="fas fa-bars"></i></a>
                 <h1 class="caption">Veteran Studio</h1>
             </div>
         </div>
@@ -33,9 +33,10 @@
                 <li><p>After Effect Animations templats</p></li>
             </ul>
             <p class="center">It's all free:)</p>
+            <a href="About.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
         </div>
 
-
+<section class="products">
         <section>
             <h2 class="subheading">Web Sites</h2>
 
@@ -45,7 +46,7 @@
                 </div>
                 <div class="detailes">
                     <h3>Newyear wish</h3><br>
-                    <h3>&copy;VETERAN'S2019</h3>
+                    <h4>&copy;VETERAN'S2019</h4>
                     <a  href="web/ny.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
                 </div>
             </div>
@@ -56,7 +57,7 @@
                 </div>
                 <div class="detailes">
                     <h3>Chirismas wish</h3><br>
-                    <h3>&copy;VETERAN'S2019</h3>
+                    <h4>&copy;VETERAN'S2019</h4>
                     <a  href="web/x-mas.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
                 </div>
             </div>
@@ -67,7 +68,7 @@
                 </div>
                 <div class="detailes">
                     <h3>Tamil newyear wish</h3><br>
-                    <h3>&copy;VETERAN'S2019</h3>
+                    <h4>&copy;VETERAN'S2019</h4>
                     <a  href="web/tamil.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
                 </div>
             </div>
@@ -86,7 +87,7 @@
 
 
 
-        <section>
+<section>
             <h2 class="subheading">Fonts</h2>
             <div class="sale">
                 <div class="pot">
@@ -134,11 +135,12 @@
                     <h3>UpDown</h3>
                     <h3>Put your phone on the floor facing upside and while<br> doing push ups try to touch the screen with your nose.<br>I know you may think it's funny but try it <br>you will find it it's more helpful.<br></h3>
                     <h3>&copy;Vishnugopy2019</h3>
-                    <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><div class="btn"><h3>INSTALL</h3></div></a>
+                    <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><h3 class="btn">INSTALL</h3></a>
                 </div>
             </div>
 
         </section>
+    
         <section>
             <h2 class="subheading">Photoshop brushes</h2>
 
@@ -154,9 +156,9 @@
                 </div>
             </div>
         </section>
-
+</section>
     </body>
-    <a href="second.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
+
     <footer>
         <h3 class="copy"><a href="https://www.instagram.com/veterans_in/">&copy;VETERAN'S_2019</a></h3>
     </footer>
