--- a/index.html
+++ b/index.html
@@ -36,127 +36,127 @@
             <a href="About.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
         </div>
 
-<section class="products">
-        <section>
-            <h2 class="subheading">Web Sites</h2>
+        <section class="products">
+            <section>
+                <h2 class="subheading">Web Sites</h2>
 
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/1.png" alt="vishnu's"/>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/1.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3>Newyear wish</h3><br>
+                        <h4>&copy;VETERAN'S2019</h4>
+                        <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
                 </div>
-                <div class="detailes">
-                    <h3>Newyear wish</h3><br>
-                    <h4>&copy;VETERAN'S2019</h4>
-                    <a  href="web/ny.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
-                </div>
-            </div>
 
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/2.png" alt="vishnu's"/>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/2.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3>Chirismas wish</h3><br>
+                        <h4>&copy;VETERAN'S2019</h4>
+                        <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
                 </div>
-                <div class="detailes">
-                    <h3>Chirismas wish</h3><br>
-                    <h4>&copy;VETERAN'S2019</h4>
-                    <a  href="web/x-mas.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
-                </div>
-            </div>
 
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/3.png" alt="vishnu's"/>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/3.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3>Tamil newyear wish</h3><br>
+                        <h4>&copy;VETERAN'S2019</h4>
+                        <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
                 </div>
-                <div class="detailes">
-                    <h3>Tamil newyear wish</h3><br>
-                    <h4>&copy;VETERAN'S2019</h4>
-                    <a  href="web/tamil.html"><div class="btn"><h3>GO TO SITE</h3></div></a>
-                </div>
-            </div>
 
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/4.png" alt="vishnu's"/>
-                </div>
-                <div class="detailes">
-                    <h3>Love Calculater</h3><br>
-                    <h3>&copy;VETERAN'S2019</h3>
-                    <a  href="https://vishnugopy.github.io/LOVE/"><div class="btn"><h3>GO TO SITE</h3></div></a>
-                </div>
-            </div>   
-        </section> 
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/4.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3>Love Calculater</h3><br>
+                        <h3>&copy;VETERAN'S2019</h3>
+                        <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
+                    </div>
+                </div>   
+            </section> 
 
 
 
-<section>
-            <h2 class="subheading">Fonts</h2>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/kabavi%20font.jpg">
+            <section>
+                <h2 class="subheading">Fonts</h2>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/kabavi%20font.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3>KABAVI Font</h3><br>
+                        <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
+                        <h3>&copy;VETERAN'S2019</h3>
+                        <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VETERAN'S"><h3 class="btn">Download</h3></a>
+                    </div>
                 </div>
-                <div class="detailes">
-                    <h3>KABAVI Font</h3><br>
-                    <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
-                    <h3>&copy;VETERAN'S2019</h3>
-                    <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VETERAN'S"><div class="btn"><h3>Download</h3></div></a>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/SSCOVER.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3>SuperStar</h3>
+                        <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
+                        <h3>&copy;VETERAN'S2019</h3>
+                        <a  href="file/superstar-font.zip" download="SUPERSTAR BY VETERAN'S"><h3 class="btn">Download</h3></a>
+                    </div>
                 </div>
-            </div>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/SSCOVER.jpg">
-                </div>
-                <div class="detailes">
-                    <h3>SuperStar</h3>
-                    <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
-                    <h3>&copy;VETERAN'S2019</h3>
-                    <a  href="file/superstar-font.zip" download="SUPERSTAR BY VETERAN'S"><div class="btn"><h3>Download</h3></div></a>
-                </div>
-            </div>
 
+            </section>
+
+            <section>
+                <h2 class="subheading">Apps on Playstore</h2>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/vista.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3>VISTA</h3>
+                        <h3>This app will help you to Find more friends <br>with Tamil community</h3>
+                        <h3>&copy;VETERAN2019</h3>
+                        <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista" ><h3 class="btn">INSTALL</h3></a>
+                    </div>
+                </div>
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/updown.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3>UpDown</h3>
+                        <h3>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h3>
+                        <h3>&copy;Vishnugopy2019</h3>
+                        <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><h3 class="btn">INSTALL</h3></a>
+                    </div>
+                </div>
+
+            </section>
+
+            <section>
+                <h2 class="subheading">Photoshop brushes</h2>
+
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/hair.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3>Beard brush</h3><br>
+                        <h3>Play with brush setting to<br> get realistic hair look</h3>
+                        <h3>&copy;VETERAN'S2019</h3>
+                        <a  href="file/superstar-font.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
+                    </div>
+                </div>
+            </section>
         </section>
-
-        <section>
-            <h2 class="subheading">Apps on Playstore</h2>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/vista.jpg">
-                </div>
-                <div class="detailes">
-                    <h3>VISTA</h3>
-                    <h3>This app will help you to Find more friends <br>with Tamil community</h3>
-                    <h3>&copy;VETERAN2019</h3>
-                    <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista" ><div class="btn"><h3>INSTALL</h3></div></a>
-                </div>
-            </div>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/updown.jpg">
-                </div>
-                <div class="detailes">
-                    <h3>UpDown</h3>
-                    <h3>Put your phone on the floor facing upside and while<br> doing push ups try to touch the screen with your nose.<br>I know you may think it's funny but try it <br>you will find it it's more helpful.<br></h3>
-                    <h3>&copy;Vishnugopy2019</h3>
-                    <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><h3 class="btn">INSTALL</h3></a>
-                </div>
-            </div>
-
-        </section>
-    
-        <section>
-            <h2 class="subheading">Photoshop brushes</h2>
-
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/hair.jpg">
-                </div>
-                <div class="detailes">
-                    <h3>Beard brush</h3><br>
-                    <h3>Play with brush setting to<br> get realistic hair look</h3>
-                    <h3>&copy;VETERAN'S2019</h3>
-                    <a  href="file/superstar-font.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
-                </div>
-            </div>
-        </section>
-</section>
     </body>
 
     <footer>
