--- a/About.html
+++ b/About.html
@@ -6,13 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img\V.png">
         <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     </head>
     <body>
         <header class="myhead">
@@ -40,7 +33,7 @@
             </div>
         </section>
 
-        <a href="index.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
+        <a href="index.html"><div class="btnf"><h2>Go to shop</h2></div></a>
 
         <section class="first">
             <h2 class="subheading">You Can Find Me On</h2>
@@ -56,7 +49,7 @@
 
 
         <footer>
-            <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a></h3>
+         <a class="copy" href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a>
         </footer>
     </body>
 </html>
