--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img\V.png">
         <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     </head>
     <body>
         <div class="storehead" id="store">
             <div class="flex">
                 <a class="menu" href="About.html"><i  class="fas fa-bars"></i></a>
-                <h1 class="caption">Veteran Studio</h1>
+                <h1>Veteran's_in</h1>
             </div>
         </div>
 
@@ -33,7 +26,7 @@
                 <li><p>After Effect Animations templats</p></li>
             </ul>
             <p class="center">It's all free:)</p>
-            <a href="About.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
+            <a href="About.html"><div class="btnf"><h3>Go to Contact</h3></div></a>
         </div>
 
         <section class="products">
@@ -46,7 +39,7 @@
                     </div>
                     <div class="detailes">
                         <h3>Newyear wish</h3><br>
-                        <h4>&copy;VETERAN'S2019</h4>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -57,7 +50,7 @@
                     </div>
                     <div class="detailes">
                         <h3>Chirismas wish</h3><br>
-                        <h4>&copy;VETERAN'S2019</h4>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -68,7 +61,7 @@
                     </div>
                     <div class="detailes">
                         <h3>Tamil newyear wish</h3><br>
-                        <h4>&copy;VETERAN'S2019</h4>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -79,7 +72,7 @@
                     </div>
                     <div class="detailes">
                         <h3>Love Calculater</h3><br>
-                        <h3>&copy;VETERAN'S2019</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>   
@@ -95,8 +88,8 @@
                     </div>
                     <div class="detailes">
                         <h3>KABAVI Font</h3><br>
-                        <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
-                        <h3>&copy;VETERAN'S2019</h3>
+                        <h3>Only Capital Letters Will Support Keep In Mind</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VETERAN'S"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
@@ -106,8 +99,8 @@
                     </div>
                     <div class="detailes">
                         <h3>SuperStar</h3>
-                        <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
-                        <h3>&copy;VETERAN'S2019</h3>
+                        <h3>Only Capital Letters Will Support Keep In Mind</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/superstar-font.zip" download="SUPERSTAR BY VETERAN'S"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
@@ -122,8 +115,8 @@
                     </div>
                     <div class="detailes">
                         <h3>VISTA</h3>
-                        <h3>This app will help you to Find more friends <br>with Tamil community</h3>
-                        <h3>&copy;VETERAN2019</h3>
+                        <h3>This app will help you to Find more friends with Tamil community</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista" ><h3 class="btn">INSTALL</h3></a>
                     </div>
                 </div>
@@ -134,7 +127,7 @@
                     <div class="detailes">
                         <h3>UpDown</h3>
                         <h3>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h3>
-                        <h3>&copy;Vishnugopy2019</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><h3 class="btn">INSTALL</h3></a>
                     </div>
                 </div>
@@ -150,8 +143,8 @@
                     </div>
                     <div class="detailes">
                         <h3>Beard brush</h3><br>
-                        <h3>Play with brush setting to<br> get realistic hair look</h3>
-                        <h3>&copy;VETERAN'S2019</h3>
+                        <h3>Play with brush setting to get realistic hair look</h3>
+                        <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/superstar-font.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
@@ -160,6 +153,6 @@
     </body>
 
     <footer>
-        <h3 class="copy"><a href="https://www.instagram.com/veterans_in/">&copy;VETERAN'S_2019</a></h3>
+        <a class="copy" href="https://www.instagram.com/veterans_in/">&copy;VETERAN'S_2019</a>
     </footer>
 </html>
