--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
                 <div class="sale">
                     <div class="pot">
-                        <img class="log" src="img/1.png" alt="vishnu's"/>
+                        <img class="log" src="img/newyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Newyear wish</h3><br>
+                        <h3>Newyear Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -46,10 +46,10 @@
 
                 <div class="sale">
                     <div class="pot">
-                        <img class="log" src="img/2.png" alt="vishnu's"/>
+                        <img class="log" src="img/xmas.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Chirismas wish</h3><br>
+                        <h3>Chirismas Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -57,10 +57,10 @@
 
                 <div class="sale">
                     <div class="pot">
-                        <img class="log" src="img/3.png" alt="vishnu's"/>
+                        <img class="log" src="img/tamilnewyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Tamil newyear wish</h3><br>
+                        <h3>Tamil Newyear Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -68,7 +68,7 @@
 
                 <div class="sale">
                     <div class="pot">
-                        <img class="log" src="img/4.png" alt="vishnu's"/>
+                        <img class="log" src="img/lovecalculator.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
                         <h3>Love Calculater</h3><br>
@@ -153,6 +153,8 @@
     </body>
 
     <footer>
-        <a class="copy" href="https://www.instagram.com/veterans_in/">&copy;VETERAN'S_2019</a>
+        <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019</a>
+        <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
+        <a href="About.html"><h5>Click Here To Findout</h5></a>
     </footer>
 </html>
