--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
 
         </header>
         <section class="flex">
-            <img class="photo" src="./img/001.jpg" alt="image">
+            <img class="photo" src="./img/me.jpg" alt="image">
             <div class="text">
                 <h3>Hi I am vishnu</h3>
                 <h3>I am 19 years old</h3>
@@ -49,7 +49,7 @@
 
 
         <footer>
-         <a class="copy" href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a>
+         <a class="copyrights" href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a>
         </footer>
     </body>
 </html>
