--- a/About.html
+++ b/About.html
@@ -49,6 +49,7 @@
 
 
         <footer>
+        <center><img class="logo" src="img/logopng.png" alt="image" style="width:20%;height:auto;"></center>
          <a class="copyrights" href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a>
         </footer>
     </body>
