--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Veteran Studio</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="img\V.png">
+        <link rel="icon" href="img\logopng.png">
         <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     </head>
     <body>
@@ -153,6 +153,7 @@
     </body>
 
     <footer>
+        <center><img class="logo" src="img/logopng.png" alt="image" style="width:100px;height:auto;"></center>
         <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019</a>
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
