--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Veteran Studio</title>
+        <title>Veteran'S'</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img\logopng.png">
@@ -15,20 +15,21 @@
                 <h1>Veteran's_in</h1>
             </div>
         </div>
-
-        <div class="text">
-            <p>In This Section You Will Find</p>
-            <ul>
-                <li><p>Fonts</p></li>
-                <li><p>Interesting Web Sites</p></li>
-                <li><p>Some Small Apps</p></li>
-                <li><p>Photoshop templates</p></li>
-                <li><p>After Effect Animations templats</p></li>
-            </ul>
-            <p class="center">It's all free:)</p>
-            <a href="About.html"><div class="btnf"><h3>Go to Contact</h3></div></a>
-        </div>
-
+        <section class="flex">
+            <img class="storephoto" src="img/logopng.png" alt="image">
+            <div class="text">
+                <p>In This Section You Will Find</p>
+                <ul>
+                    <li><p>Fonts</p></li>
+                    <li><p>Interesting Web Sites</p></li>
+                    <li><p>Some Small Apps</p></li>
+                    <li><p>Photoshop templates</p></li>
+                    <li><p>After Effect Animations templats</p></li>
+                </ul>
+                <p class="center">It's all free 💙</p>
+                <a href="About.html"><div class="btnf"><h3>Go to Contact</h3></div></a>
+            </div>
+        </section>
         <section class="products">
             <section>
                 <h2 class="subheading">Web Sites</h2>
@@ -154,7 +155,7 @@
 
     <footer>
         <center><img class="logo" src="img/logopng.png" alt="image" style="width:100px;height:auto;"></center>
-        <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019</a>
+        <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019🖖🏼</a>
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
     </footer>
