--- a/About.html
+++ b/About.html
@@ -18,9 +18,7 @@
         <section class="flex">
             <img class="photo" src="./img/me.jpg" alt="image">
             <div class="text">
-                <h3>Hi I am vishnu</h3>
-                <h3>I am 19 years old</h3>
-                <h3>Living in france</h3>
+                <h3>Hi I am vishnu,I am 19 years old,Living in france</h3>
                 <h3>I Made</h3>
                 <ul>
                     <li><p>Fonts</p></li>
