--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <img class="log" src="img/newyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Newyear Wish</h3><br>
+                        <h3 class="line">Newyear Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -50,7 +50,7 @@
                         <img class="log" src="img/xmas.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Chirismas Wish</h3><br>
+                        <h3 class="line">Chirismas Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -61,7 +61,7 @@
                         <img class="log" src="img/tamilnewyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Tamil Newyear Wish</h3><br>
+                        <h3 class="line">Tamil Newyear Wish</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -72,7 +72,7 @@
                         <img class="log" src="img/lovecalculator.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3>Love Calculater</h3><br>
+                        <h3 class="line">Love Calculater</h3><br>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
                     </div>
@@ -88,7 +88,7 @@
                         <img class="log" src="img/kabavi%20font.jpg">
                     </div>
                     <div class="detailes">
-                        <h3>KABAVI Font</h3><br>
+                        <h3 class="line">KABAVI Font</h3><br>
                         <h3>Only Capital Letters Will Support Keep In Mind</h3>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VETERAN'S"><h3 class="btn">Download</h3></a>
@@ -99,7 +99,7 @@
                         <img class="log" src="img/SSCOVER.jpg">
                     </div>
                     <div class="detailes">
-                        <h3>SuperStar</h3>
+                        <h3 class="line">SuperStar</h3>
                         <h3>Only Capital Letters Will Support Keep In Mind</h3>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/superstar-font.zip" download="SUPERSTAR BY VETERAN'S"><h3 class="btn">Download</h3></a>
@@ -115,7 +115,7 @@
                         <img class="log" src="img/vista.jpg">
                     </div>
                     <div class="detailes">
-                        <h3>VISTA</h3>
+                        <h3 class="line">VISTA</h3>
                         <h3>This app will help you to Find more friends with Tamil community</h3>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista" ><h3 class="btn">INSTALL</h3></a>
@@ -126,7 +126,7 @@
                         <img class="log" src="img/updown.jpg">
                     </div>
                     <div class="detailes">
-                        <h3>UpDown</h3>
+                        <h3 class="line">UpDown</h3>
                         <h3>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h3>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en" ><h3 class="btn">INSTALL</h3></a>
@@ -143,7 +143,7 @@
                         <img class="log" src="img/hair.jpg">
                     </div>
                     <div class="detailes">
-                        <h3>Beard brush</h3><br>
+                        <h3 class="line">Beard brush</h3><br>
                         <h3>Play with brush setting to get realistic hair look</h3>
                         <h4>&copy;Veteran's_2019</h4>
                         <a  href="file/superstar-font.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
