--- a/index.html
+++ b/index.html
@@ -158,5 +158,9 @@
         <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019🖖🏼</a>
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
+        <audio controls autoplay>
+        <source src="img/bg.mp3" type="audio/mpeg">
+        I'm sorry Your browser does not support the audio element.
+        </audio>
     </footer>
 </html>
