--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
         <audio controls autoplay>
-        <source src="img/bg.mp3" type="audio/mpeg">
+        <source src="img/bg1.mp3" type="audio/mpeg">
         I'm sorry Your browser does not support the audio element.
         </audio>
     </footer>
