--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                 <a href="About.html"><div class="btnf"><h3>Go to Contact</h3></div></a>
             </div>
         </section>
+        <center><section>
+            <audio controls autoplay loop>
+                <source src="img/bg1.mp3" type="audio/mpeg">
+                I'm sorry Your browser does not support the audio element.
+            </audio>
+            <h5>Enjoy Our music While Looking At Our Products</h5>
+        </section></center>
         <section class="products">
             <section>
                 <h2 class="subheading">Web Sites</h2>
@@ -159,8 +166,8 @@
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
         <audio controls autoplay>
-        <source src="img/bg1.mp3" type="audio/mpeg">
-        I'm sorry Your browser does not support the audio element.
+            <source src="img/bg1.mp3" type="audio/mpeg">
+            I'm sorry Your browser does not support the audio element.
         </audio>
     </footer>
 </html>
