--- a/index.html
+++ b/index.html
@@ -30,64 +30,16 @@
                 <a href="About.html"><div class="btnf"><h3>Go to Contact</h3></div></a>
             </div>
         </section>
+
         <center><section>
             <audio controls autoplay loop>
                 <source src="img/bg1.mp3" type="audio/mpeg">
                 I'm sorry Your browser does not support the audio element.
             </audio>
             <h5>Enjoy Our music While Looking At Our Products</h5>
-        </section></center>
+            </section></center>
+
         <section class="products">
-            <section>
-                <h2 class="subheading">Web Sites</h2>
-
-                <div class="sale">
-                    <div class="pot">
-                        <img class="log" src="img/newyear.png" alt="vishnu's"/>
-                    </div>
-                    <div class="detailes">
-                        <h3 class="line">Newyear Wish</h3><br>
-                        <h4>&copy;Veteran's_2019</h4>
-                        <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
-                    </div>
-                </div>
-
-                <div class="sale">
-                    <div class="pot">
-                        <img class="log" src="img/xmas.png" alt="vishnu's"/>
-                    </div>
-                    <div class="detailes">
-                        <h3 class="line">Chirismas Wish</h3><br>
-                        <h4>&copy;Veteran's_2019</h4>
-                        <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
-                    </div>
-                </div>
-
-                <div class="sale">
-                    <div class="pot">
-                        <img class="log" src="img/tamilnewyear.png" alt="vishnu's"/>
-                    </div>
-                    <div class="detailes">
-                        <h3 class="line">Tamil Newyear Wish</h3><br>
-                        <h4>&copy;Veteran's_2019</h4>
-                        <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
-                    </div>
-                </div>
-
-                <div class="sale">
-                    <div class="pot">
-                        <img class="log" src="img/lovecalculator.png" alt="vishnu's"/>
-                    </div>
-                    <div class="detailes">
-                        <h3 class="line">Love Calculater</h3><br>
-                        <h4>&copy;Veteran's_2019</h4>
-                        <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
-                    </div>
-                </div>   
-            </section> 
-
-
-
             <section>
                 <h2 class="subheading">Fonts</h2>
                 <div class="sale">
@@ -143,6 +95,54 @@
             </section>
 
             <section>
+                <h2 class="subheading">Web Sites</h2>
+
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/newyear.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">Newyear Wish</h3><br>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
+                </div>
+
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/xmas.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">Chirismas Wish</h3><br>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
+                </div>
+
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/tamilnewyear.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">Tamil Newyear Wish</h3><br>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
+                    </div>
+                </div>
+
+                <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/lovecalculator.png" alt="vishnu's"/>
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">Love Calculater</h3><br>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
+                    </div>
+                </div>   
+            </section>    
+
+            <section>
                 <h2 class="subheading">Photoshop brushes</h2>
 
                 <div class="sale">
@@ -157,6 +157,19 @@
                     </div>
                 </div>
             </section>
+
+            <section>
+                <h2 class="subheading">Our DJ(France)</h2>
+                <div class="dj">
+                    <img class="djcard" src="img/djs.jpg" alt="dj" style="width:100%;height:40%;">
+                     <center><a href="tel:003307617431"><h3 class="btndj">Call</h3></a></center>
+                </div>
+               
+
+
+            </section>
+
+
         </section>
     </body>
 
@@ -165,9 +178,5 @@
         <a class="copyrights" href="https://www.instagram.com/veterans_in/">&copy;Veterans's_in_2019🖖🏼</a>
         <h5>This page is hand coded  and everything in store is free.Thankyou!</h5>
         <a href="About.html"><h5>Click Here To Findout</h5></a>
-        <audio controls autoplay>
-            <source src="img/bg1.mp3" type="audio/mpeg">
-            I'm sorry Your browser does not support the audio element.
-        </audio>
     </footer>
 </html>
