--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                 <h2 class="subheading">Our DJ(France)</h2>
                 <div class="dj">
                     <img class="djcard" src="img/djs.jpg" alt="dj" style="width:100%;height:40%;">
-                    <center><a href="tel:00337617431"><h3 class="btndj">Call</h3></a></center>
+                    <center><a href="tel:0033767717431"><h3 class="btndj">Call</h3></a></center>
+                    <center><a href="tel:0033767460955"><h3 class="btndj">Call</h3></a></center>
+                    <center><a href="https://www.instagram.com/djsandsons/"><h3 class="btndj">INSTAGRAM</h3></a></center>
                     <h5 style="text-align: center;">The Music You're Listening Is Composed By DJSandSONS</h5>
                 </div>
                
