--- a/index.html
+++ b/index.html
@@ -153,7 +153,18 @@
                         <h3 class="line">Beard brush</h3><br>
                         <h3>Play with brush setting to get realistic hair look</h3>
                         <h4>&copy;Veteran's_2019</h4>
-                        <a  href="file/superstar-font.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
+                        <a  href="file/superstar-font.zip" download="Facial hair Veteran'S"><h3 class="btn">Download</h3></a>
+                    </div>
+                </div>
+                 <div class="sale">
+                    <div class="pot">
+                        <img class="log" src="img/fogy.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">Fogy brush</h3><br>
+                        <h3>Play with brush setting to get realistic Cloud Look</h3>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="file/Fogy%20Brush%20Veteran'S.rar" download="Fogy brush Veteran'S"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
             </section>
