--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
         <title>Suthaharan Vishnugopy</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="img\V.png">
+        <link rel="icon" href="img\logopng2.png">
         <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     </head>
     <body>
