--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Veteran'S</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="img\logopng.png">
+        <link rel="icon" href="img\logopng2.png">
         <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     </head>
     <body>
