--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                 <h2 class="subheading">Fonts</h2>
                 <div class="sale">
                     <div class="pot">
+                        <img class="log" src="img/GOSTA.jpg">
+                    </div>
+                    <div class="detailes">
+                        <h3 class="line">GOSTA Font</h3>
+                        <h4>&copy;Veteran's_2019</h4>
+                        <a  href="file/gosta.zip" download="GOSTA Font BY VETERAN'S"><h3 class="btn">Download</h3></a>
+                    </div>
+                </div>
+                <div class="sale">
+                    <div class="pot">
                         <img class="log" src="img/kabavi%20font.jpg">
                     </div>
                     <div class="detailes">
