--- a/About.html
+++ b/About.html
@@ -5,33 +5,18 @@
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img\logopng2.png">
-        <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
+        <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     </head>
+    <header class="main-bar">
+    <a href="index.html"><i class="fas fa-store-alt"></i></a>
+    <a href="services.html"><i class="fas fa-icons"></i></a>
+    <a href="About.html"><i class="far fa-user-circle"></i></a>
+    </header>
     <body>
-        <header class="myhead">
-            <div class="flex">
-                <a class="menu" href="index.html"><i class="fas fa-hdd"></i></a>
-                <h1>Vishnugopy</h1>
-            </div>
+        
 
-        </header>
-        <section class="flex">
-            <img class="photo" src="./img/me.jpg" alt="image">
-            <div class="text">
-                <h3>Hi I am vishnu,I am 19 years old,Living in france</h3>
-                <h3>I Made</h3>
-                <ul>
-                    <li><p>Fonts</p></li>
-                    <li><p>Interesting Web Sites</p></li>
-                    <li><p>Apps Made By Me</p></li>
-                    <li><p>Designs</p></li>
-                    <li><p>After Effect Animations</p></li>
-                </ul>
-                <h3 class="center">You Can Find My Products On My Store..</h3>
-            </div>
-        </section>
 
-        <a href="index.html"><div class="btnf"><h2>Go to shop</h2></div></a>
+
 
         <section class="first">
             <h2 class="subheading">You Can Find Me On</h2>
